SERVER-29015 TopologyCoordinator should not transition to candidate role in a single node replica set if we are in maintenance mode